--- a/src/assets/less/dependencies.less
+++ b/src/assets/less/dependencies.less
@@ -6,6 +6,7 @@
 @import        "../../../bower_components/font-awesome/less/font-awesome.less";
 @import        "../../../bower_components/animate.less/animate";
 @import        "../../../bower_components/jquery-toggles/less/toggles.less";
+@import (less) "../../../bower_components/multiselect/css/multi-select.css";
 
 // Template files, copied from the vendor digbang/backoffice-template
 @import "template/style.default.less";
