--- a/src/assets/less/overrides.less
+++ b/src/assets/less/overrides.less
@@ -18,6 +18,7 @@ body {
 }
 
 .ms-container {
+    background: transparent url('../images/switch.png') no-repeat 50% 50%;
 	width: auto;
 
 	.ms-selectable, .ms-selection {
