--- a/src/assets/less/dependencies.less
+++ b/src/assets/less/dependencies.less
@@ -22,3 +22,4 @@
 @import "template/roboto.less";
 @import "template/jquery.datatables.less";
 @import "template/jquery.gritter.less";
+@import "template/colorpicker.less";
