Closes #16: destroy method generated with a redirect back with session message instead of array of errors

--- a/src/Digbang/L4Backoffice/templates/controller.mustache
+++ b/src/Digbang/L4Backoffice/templates/controller.mustache
@@ -271,7 +271,7 @@ class {{ classData.name }}Controller extends Controller
 		}
 		catch (ValidationException $e)
 		{
-			return \Redirect::back()->withErrors($e->getErrors());
+			return \Redirect::back()->withDanger(implode('<br/>', $e->getErrors()));
 		}
 		catch (PermissionException $e)
 		{
