Fixed export method default columns. Now it should be the same as the list by default.

--- a/src/Digbang/L4Backoffice/templates/controller.mustache
+++ b/src/Digbang/L4Backoffice/templates/controller.mustache
@@ -290,7 +290,7 @@ class {{ classData.name }}Controller extends Controller
 
 		$list->fill($this->getData(null));
 
-		$columns = $list->columns()->hide([])->sortable([]);
+		$columns = $list->columns()->visible();
 		$rows = $list->rows();
 
 		$this->excelExporter->create(\Str::slug($this->titlePlural), function($excel) use ($columns, $rows) {
